fixed possible issue with color contrast in LI.  was whitesmoke on teal, now black on teal. not sure that fixed anything.

--- a/styles/base.css
+++ b/styles/base.css
@@ -99,7 +99,7 @@ p {
   padding: 2rem;
   font-weight: 400;  
   font-size: 23px;
-  color: whitesmoke;   
+  color: black;   
 }
 
 li:hover {  
